force-app/main/default/objects/Apttus_Config2__CostLineItem__c/Apttus_Config2__CostLineItem__c.object-meta.xml
<CustomObject>
    <description>Represents cost associated with base price of line item</description>
    <label>Cost Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000000000}</displayFormat>
        <label>Cost Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>