force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__AllowManualAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether user can override the adjustment</description>
    <label>Allow Manual Adjustment</label>
    <type>Checkbox</type>
</CustomField>