force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__BaseCost__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BaseCost__c</fullName>
    <description>Cost defined in related cost price list item</description>
    <label>Base Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>