force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__BaseCostOverride__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BaseCostOverride__c</fullName>
    <description>User entered value to override base cost</description>
    <label>Base Cost (Override)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>