force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__CostType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CostType__c</fullName>
    <description>Cost type for the cost line item</description>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Material Cost</fullName>
            </value>
            <value>
                <fullName>Transportation Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>