force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__CostTypeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CostTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the cost type object</description>
    <label>Cost Type</label>
    <referenceTo>Apttus_Config2__CostType__c</referenceTo>
    <relationshipLabel>Cost Line Items</relationshipLabel>
    <relationshipName>CostLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>