force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__NetCost__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NetCost__c</fullName>
    <description>Total cost for a const line item</description>
    <label>Net Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>