force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__ParentCostLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentCostLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to parent cost line item based on hierarchical relationship</description>
    <label>Parent Cost Line Item</label>
    <referenceTo>Apttus_Config2__CostLineItem__c</referenceTo>
    <relationshipLabel>Cost Line Items</relationshipLabel>
    <relationshipName>CostLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>