force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__PriceListItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Price List Item</description>
    <label>Price List Item</label>
    <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
    <relationshipLabel>Cost Line Items</relationshipLabel>
    <relationshipName>CostLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>