force-app/main/default/objects/Apttus_Config2__CostLineItem__c/fields/Apttus_Config2__TransferPriceLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TransferPriceLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Line Item from collaborators cart from which transfer prices was received for this cost line item</description>
    <inlineHelpText>Line Item from collaborators cart from which transfer prices was received for this cost line item</inlineHelpText>
    <label>Transfer Price Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Cost Line Items (Transfer Price Line Item)</relationshipLabel>
    <relationshipName>CostLineItemsTP</relationshipName>
    <type>Lookup</type>
</CustomField>